--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.default.compilerPath": "c:\\Users\\HP\\Downloads\\msys2-x86_64-20250221.exe"
+    "C_Cpp.default.compilerPath": "c:\\Users\\HP\\Downloads\\msys2-x86_64-20250221.exe",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
